infra/k3s/mongodb-twitter.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-twitter
  namespace: ecoguard
spec:
  serviceName: mongo-twitter
  replicas: 1
  selector:
    matchLabels:
      app: mongo-twitter
  template:
    metadata:
      labels:
        app: mongo-twitter
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-twitter
  namespace: ecoguard
spec:
  selector:
    app: mongo-twitter
  ports:
    - port: 27017
      targetPort: 27017
